--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,10 +78,12 @@ stages:
       - job: 'InstallK8S'
         steps:
           - script: |
-              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
-              echo "$(cat kubectl.sha256)  kubectl" | sha256sum --check
-              sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+              sudo apt-get update
+              sudo apt-get install -y apt-transport-https ca-certificates curl
+              curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+              echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list
+              sudo apt-get update
+              sudo apt-get install -y kubectl
               kubectl version
             displayName: "Installing Kubernetes"
         condition: succeeded()
