--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: Linux-vm-3
+    runs-on: [Linux-vm-3, linux, ARM64]
       
     steps:
     - uses: actions/checkout@v3
