--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
 
     - name: Package Installation
-      uses: "./installation.yaml"
+      uses: "./.github/workflows/installation"
 
     - name: Clean Install
       run: mvn clean install
