--- a/.github/workflows/installation/action.yaml
+++ b/.github/workflows/installation/action.yaml
@@ -1,15 +1,10 @@
-name: Package Installation
+name: "Package Installation"
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-run:
+runs:
+  using: "composite"
   steps:
-  - name: Java Install
-    run: sudo apt install openjdk-17-jdk openjdk-17-jre
-
-  - name: Maven Install
-    run: sudo apt install maven
+    - name: Java Install
+      run: sudo apt install openjdk-17-jdk openjdk-17-jre
+  
+    - name: Maven Install
+      run: sudo apt install maven
